RESOLVED FIXED92135
Typo: doubleTa*b*ZoomAnimationDurationInSeconds in WebViewImpl.cpp
https://bugs.webkit.org/show_bug.cgi?id=92135
Summary Typo: doubleTa*b*ZoomAnimationDurationInSeconds in WebViewImpl.cpp
WebKit Review Bot
Reported 2012-07-24 10:14:48 PDT
Typo: doubleTa*b*ZoomAnimationDurationInSeconds in WebViewImpl.cpp Requested by abarth on #webkit.
Attachments
Patch (2.02 KB, patch)
2012-07-30 10:28 PDT, Adam Barth
haraken: review+
webkit.review.bot: commit-queue-
Adam Barth
Comment 1 2012-07-30 10:28:19 PDT
Kentaro Hara
Comment 2 2012-07-30 17:12:04 PDT
Comment on attachment 155314 [details] Patch OK
WebKit Review Bot
Comment 3 2012-07-30 17:51:06 PDT
Comment on attachment 155314 [details] Patch Rejecting attachment 155314 [details] from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 1 ERROR: /mnt/git/webkit-commit-queue/LayoutTests/ChangeLog neither lists a valid reviewer nor contains the string "Unreviewed" or "Rubber stamp" (case insensitive). Full output: http://queues.webkit.org/results/13385711
WebKit Review Bot
Comment 4 2012-07-30 19:15:38 PDT
Comment on attachment 155314 [details] Patch Rejecting attachment 155314 [details] from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 2 Last 500 characters of output: rce/WebCore/ChangeLog Failed to merge in the changes. Patch failed at 0001 Grid Demo spends 1.5% of total time allocating Path objects in RenderBoxModelObject::paintBorderSides When you have resolved this problem run "git rebase --continue". If you would prefer to skip this patch, instead run "git rebase --skip". To restore the original branch and stop rebasing run "git rebase --abort". rebase refs/remotes/origin/master: command returned error: 1 Died at Tools/Scripts/update-webkit line 164. Full output: http://queues.webkit.org/results/13388628
Adam Barth
Comment 5 2012-07-31 12:01:53 PDT
Note You need to log in before you can comment on or make changes to this bug.