Typo: doubleTa*b*ZoomAnimationDurationInSeconds in WebViewImpl.cpp https://bugs.webkit.org/show_bug.cgi?id=92135

Reviewed by Kentaro Hara.

This patch fixes a typo.

* src/WebViewImpl.cpp:
(WebKit::WebViewImpl::animateZoomAroundPoint):


Canonical link: https://commits.webkit.org/110607@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@124232 268f45cc-cd09-0410-ab3c-d52691b4dbfc